test/visibility/submodule-in-file/errors/BlankIncludePrivate.chpl
include module SubModule;

writeln("Module init");
var v = 100;
proc f() { return 200; }
