test/visibility/submodule-in-file/errors/BlankIncludePrivate.good
BlankIncludePrivate.chpl:1: error: include public module with module declared private
BlankIncludePrivate/SubModule.chpl:1: note: module declared private here
